--- a/PortaleGeo/Views/GeoDati/Delete.cshtml
+++ b/PortaleGeo/Views/GeoDati/Delete.cshtml
@@ -4,9 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h2>ELIMINA</h2>
+<br />
+<br />
+<h5 style="color:red">Sei sicuro di voler eliminare definitivamente il dato?</h5>
 <div>
     <h4>GeoDati</h4>
     <hr />
@@ -65,8 +66,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Elimina" class="btn btn-danger" /> |
+            <strong>@Html.ActionLink("Back to List", "Index")</strong>  
         </div>
     }
 </div>
