--- a/PortaleGeo/Views/GeoDati/Index.cshtml
+++ b/PortaleGeo/Views/GeoDati/Index.cshtml
@@ -147,7 +147,7 @@
         <div id="mapid"></div>
     </div>
     <br />
-    <strong>@Html.ActionLink("Aggiungi nuovo luogo", "Create", new { @class = "MenuButtons" })</strong>
+  @*  <strong>@Html.ActionLink("Aggiungi nuovo luogo", "Create", new { @class = "MenuButtons" })</strong>*@
     <br />
     <br />
     <div id="filter" visible="true" style="display:block">
