--- a/PortaleGeo/Views/GeoDati/Details.cshtml
+++ b/PortaleGeo/Views/GeoDati/Details.cshtml
@@ -4,10 +4,11 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>DETTAGLI</h2>
 
 <div>
-    <h4>Geo_Dati</h4>
+    <h4>Geo Dati</h4>
+    <h6>Info</h6>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -61,6 +62,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    <strong>@Html.ActionLink("Edit", "Modifica", new { id = Model.Id }) |</strong> 
+    <strong>@Html.ActionLink("Ritorna alla lista", "Index")</strong> 
 </p>
