--- a/PortaleGeo/Views/GeoDati/Edit.cshtml
+++ b/PortaleGeo/Views/GeoDati/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Modifica</h2>
 
 @using (Html.BeginForm())
 {
@@ -16,18 +16,12 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IdUtente, "IdUtente", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IdUtente", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IdUtente, "", new { @class = "text-danger" })
-            </div>
-        </div>
+   
 
         <div class="form-group">
             @Html.LabelFor(model => model.DescrizioneFile, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DescrizioneFile, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DescrizioneFile, new { htmlAttributes = new { @class = "form-control",@disabled="disabled" } })
                 @Html.ValidationMessageFor(model => model.DescrizioneFile, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -66,12 +60,13 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Salva" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
-
+<br />
+<br />
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <strong>@Html.ActionLink("Torna alla lista", "Index")</strong> 
 </div>
